<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExemploBanco</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cliente">Cadastro de clientes</string>
    <string name="Nome">Nome</string>
    <string name="Documento">Documento</string>
    <string name="Telefone">Telefone</string>
    <string name="Email">Email</string>
    <string name="Salvar">Salvar</string>
    <string name="novo_cliente">Novo Cliente</string>
    <string name="dialog_editar">Editar</string>
    <string name="dialog_excluir">Excluir</string>
    <string name="dialog_titulo">Selecione</string>
    <string name="dialog_sim">Sim</string>
    <string name="dialog_nao">Não</string>
    <string name="dialog_confirma">Tem Certeza?</string>

</resources>
